# ss23-deft-detective

./: .gitignore  BlogPost.md  Deft_logic_with_polygon.py  Description.md  README.md  package-lock.json  package.json  server.js
client/: package.json
client/deftdetective-app/: package-lock.json  package.json
client/deftdetective-app/public/: index.html
client/deftdetective-app/src/: App.css  App.js  Homepage.js  Where.js  index.js
client/deftdetective-app/src/components/: CoordinatesDisplay.js  FormDataContext.js  Login.js  Map.js  Register.js  StartPage.js
client/deftdetective-app/src/pages/: FormDataContext.js  Home.css  Home.js  Mail.js  Preview.js  SignUp.js  SubmitMessage.js  What.css  What.js  WhatWhenWhere.css  When.css  When.js  Where.css  Where.js  style.css
data/: README.md  berlin_biz.csv
server/: CHANGELOG.md  Makefile  README.md  index.js  package-lock.json  package.json  pyproject.toml
server/deft_detective/: __init__.py  base.py
server/models/: User.model.js
server/public/: asset-manifest.json  index.html
server/public/static/js/: 787.3966bf61.chunk.js  787.3966bf61.chunk.js.map  main.2b5debd8.js  main.2b5debd8.js.map
server/routes/: auth.routes.js
server/tests/: test_base.py
servernode/: index.js  package-lock.json  package.json
servernode/routes/: index.js
src/: App.css  App.js
src/components/: OpenStreetMap.js  SubmitRequestForm.css  SubmitRequestForm.js
