[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deft_detective"
authors = [
    { name = "Juan Francisco Oroná", email = "jf.orona@gmail.com" },
    { name = "John Anderson", email = "johnandersonb@gmail.com" },
    { name = "Dmitry Kisler", email = "admin@dkisler.com" },
]
description = "Deft detective server"
requires-python = ">=3.10,<3.12"
keywords = ["one", "two"]
license = { text = "Apache 2.0" }
readme = "README.md"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "deft_detective.__version__" }
